feat(platform): 补充数据模型与接口联动能力